alterando title do site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="treinando cabecalho">
     <link rel="shortcut icon" href="assets/logo-icone.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>AlfaTech Soluções em hospedagem</title>
+    <title>AlfaTech</title>
 </head>
 <body> 
     <div>
