consertando o titulo so site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo-topo">
                 <img src="assets/logo-icone.png" alt="logo">
                 <div class="topo-text">
-                    <h1>AlfaTech Soluções em hospedagem</h1>
+                    <h1>AlfaTech</h1>
                     <p>Soluções em hospedagem</p>
                 </div>
                 <div class="topo-links">
