melhoria nos links do cabeçalho

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <p>Soluções em hospedagem</p>
                 </div>
                 <div class="topo-links">
-                    <a href="#">INFORMAÇÕES</a>
-                    <a href="#">PLANOS</a>
-                    <a href="#">PREÇOS</a>
-                    <a href="#">CONTATO</a>
+                    <a href="#informacoes">INFORMAÇÕES</a>
+                    <a href="#planos">PLANOS</a>
+                    <a href="#precos">PREÇOS</a>
+                    <a href="#contato">CONTATO</a>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div class="box-primeiro-anuncio">
+    <div class="box-primeiro-anuncio" >
         <div class="limitar-secao anuncio1">
             <div class="text">
                 <h2>Hospede o seu site por apenas R$29 por mês</h2>
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <div class="secao-confi">
+    <div class="secao-confi" id="informacoes">
         <div class="limitar-secao box-confi">
             <h2>Existem diversos serviços de hospedagem de sites. Porque você deve <span>nos escolher?</span></h2>
 
@@ -80,8 +80,8 @@
         </div>
     </div>
 
-    <div class="secao-table">
-        <div class="limitar-secao box-table">
+    <div class="secao-table" id="planos">
+        <div class="limitar-secao box-table" >
             <h2>Pague <span>somente</span> pelo que for usar. Sem cobranças adicionais!</h2>
 
             <table>
@@ -154,7 +154,7 @@
         </div>
     </div>
 
-    <div class="secao-rodape">
+    <div class="secao-rodape" id="contato">
         <div class="limitar-secao rodape">
             <div class="logo-rodape">
                 <img src="assets/logo-icone.png" alt="">
